2001-08-02  Keith Seitz  <keiths@redhat.com>

	* defs.h (SLASH_STRING): If not defined, set
	to "/", regardless of _WIN32, __CYGWIN__, or
	whatnot.

2001-08-02  Mark Kettenis  <kettenis@gnu.org>

	* cli/cli-decode.h: Include "gdb_regex.h" instead of
	"gnu-regex.h".

	* NEWS: Update.

2001-08-02  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/i386/xm-go32.h: Include xm-i386.h.
	(HOST_BYTE_ORDER, HOST_LONG_DOUBLE_FORMAT): Remove definitions.

2001-08-02  Eli Zaretskii  <eliz@is.elta.co.il>

	The following changes avoid polluting global namespace with the
	`enable' and `disable' identifiers, because some platforms define
	in their system headers symbols with global scope that go by those
	names.

	* breakpoint.h (enum enable_state): Rename from `enum enable'.
	Also rename all the enum members to have the "bp_" prefix.
	(struct breakpoint): Rename the `enable' member to `enable_state'.
	(enum bpdisp): Rename all members to have the "disp_" prefix.

	* breakpoint.c: All users of `enum enable' and `enum bpdisp'
	changed.
	(args_for_catchpoint_enable): Rename the `enable' member to
	`enable_p'.  All users changed.

	* tracepoint.h (enum enable): Remove.
	(struct tracepoint): The member `enabled' is now `int enabled_p'.

	* tracepoint.c: All users of the `enabled' member changed.

	* printcmd.c (struct display): The `status' member is now an int.

	* memattr.h (struct mem_region): Rename the `status' member to
	`enabled_p'.
	(enum enable): Remove.

	* memattr.c: Change all users of the `status' member of struct
	mem_region to use `enabled_p' instead.

	* infcmd.c (run_stack_dummy): Use disp_del instead of del.

	* go32-nat.c: Remove the kludgey work-around for conflicts between
	<dos.h> and "breakpoint.h".

2001-08-02  Corinna Vinschen  <vinschen@redhat.com>

	* MAINTAINERS: Add myself to the write-after-approval list.
	* ser-tcp.c (tcp_open): Use `localhost' as default host if no
	hostname is given.

2001-08-01  Andrew Cagney  <ac131313@redhat.com>
